# AegsisFw

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  t
.github/workflows/: ci.yml
config/: aegisfw.example.yaml
docs/: README.md
src/aegisfw/: __init__.py
src/aegisfw/config/: __init__.py  exceptions.py  loader.py  models.py
src/aegisfw/policy/: __init__.py  compiler.py  enums.py  exceptions.py  models.py
src/aegisfw/renderer/: __init__.py  nftables.py
tests/: __init__.py  test_config.py  test_package.py
tests/policy/: __init__.py  test_compiler.py
tests/renderer/: __init__.py  test_nftables.py
